--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
             </ul>
 
             <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-body-secondary text-uppercase">
-              <span>Saved reports</span>
+              <span>Menu Example</span>
               <a class="link-secondary" href="#" aria-label="Add a new report">
                 <svg class="bi">
                   <use xlink:href="#plus-circle" />
@@ -314,7 +314,7 @@
                   <svg class="bi">
                     <use xlink:href="#file-earmark-text" />
                   </svg>
-                  Current month
+                  Sample Link
                 </a>
               </li>
             </ul>
